# protocentral_sensything

./: .gitignore  LICENSE  README.md  connecting-qwiic.md
docs/: 1-alcohol-sensor.md  2-etape.md  3-pressure-sensor.md  4-accelerometer.md  4-web-server.md  5-activity_classifier.md  Advanced.md  Beginner.md  CNAME  Connecting to a sensor.md  Connecting-qwiic-sensors.md  Frequently asked questions.md  Licensing information.md  Sensything with BLE.md  Sensything_for_IOT.md  Setting up with ESP-IDF.md  _config.yml  arduino.md  connecting-sensors.md  experiments.md  faq.md  getting-started.md  index.md  license.md  out-of-the-box.md  sensything-arduino.md  sensything-esp-idf.md  sensything-with-arduino.md  sensything-with-esp-idf.md  setting-up-arduino.md  troubleshooting.md
docs/images/: README.md  captions.md
hardware/pc_sensything_v1.2/: pc_sensything_v1.2.sch  pc_sensything_v1.2.xls
hardware/pc_sensything_v1.2-lite/: pc_sensything_lite_v1.2.brd  pc_sensything_lite_v1.2.sch  pc_sensything_lite_v1.2.xls
hardware/pc_sensything_v1.3/: pc_sensything_v1.3.brd  pc_sensything_v1.3.sch
hardware/v1.0/: pc_sensything_v1.TXT  pc_sensything_v1.brd  pc_sensything_v1.sch
hardware/v1.2/: pc_sensything_v1.2.brd
hardware/v1.3/: pc_sensything_v1.3.xls
hardware/v1.4/: pc_sensything_v1.4.brd  pc_sensything_v1.4.sch
hardware/v1.5/: pc_sensything_v1.5.brd  pc_sensything_v1.5.sch
hardware/v1.6/: pc_sensything_v1.6.brd  pc_sensything_v1.6.sch
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/: CMakeLists.txt  Kconfig  Makefile  README-flash_api.md  README.md  component.mk
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/core/: auth.c  httpd-freertos.c  httpd-nonos.c  httpd-platform.h  httpd.c  httpdespfs.c  libesphttpd_base64.c  libesphttpd_base64.h  sha1.c
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/core/linux/: esp_log.c
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/espfs/: espfs.c  heatshrink_decoder.c
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/espfs/espfstest/: main.c
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/espfs/mkespfsimage/: Makefile  heatshrink_encoder.c  main.c
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/include/libesphttpd/: auth.h  captdns.h  cgiflash.h  cgiredirect.h  cgiwebsocket.h  cgiwifi.h  esp.h  esp32_httpd_vfs.h  espfs.h  espmissingincludes.h  httpd-freertos.h  httpd.h  httpdespfs.h  kref.h  linux.h  platform.h  route.h
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/include/linux/: esp_log.h
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/mkupgimg/: mkupgimg.c
software/Sensything_esp-idf/Sensything_experiments/Qwiic_Sensors/activity_classifier/components/libesphttpd/util/: captdns.c  cgiflash.c  cgiredirect.c  cgiwebsocket.c  cgiwifi.c  esp32_flash.c  esp32_httpd_vfs.c  esp32_wifi.c
(+76 files in other folders)
